// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Latest Command Snapshot > should format startup list consistently 1`] = `
"┌────────────────────┬────────────────────────────────────────┬────────────┬────────────────────┐
│ Name               │ Tagline                                │ Date       │ Categories         │
├────────────────────┼────────────────────────────────────────┼────────────┼────────────────────┤
│ Startup One        │ The first startup                      │ Mar 29,    │ SaaS, AI           │
│                    │                                        │ 2026       │                    │
├────────────────────┼────────────────────────────────────────┼────────────┼────────────────────┤
│ Startup Two        │ The second startup                     │ Mar 28,    │ Fintech            │
│                    │                                        │ 2026       │                    │
└────────────────────┴────────────────────────────────────────┴────────────┴────────────────────┘"
`;

exports[`Latest Command Snapshot > should handle empty list 1`] = `
"┌────────────────────┬────────────────────────────────────────┬────────────┬────────────────────┐
│ Name               │ Tagline                                │ Date       │ Categories         │
└────────────────────┴────────────────────────────────────────┴────────────┴────────────────────┘"
`;

exports[`Latest Command Snapshot > should handle minimal data 1`] = `
"┌────────────────────┬────────────────────────────────────────┬────────────┬────────────────────┐
│ Name               │ Tagline                                │ Date       │ Categories         │
├────────────────────┼────────────────────────────────────────┼────────────┼────────────────────┤
│ Minimal Startup    │ -                                      │ -          │ -                  │
└────────────────────┴────────────────────────────────────────┴────────────┴────────────────────┘"
`;
